force-app/main/default/objects/Cost__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Acquisto Hardware</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Acquisto Software</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Acquisto Servizi</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Trasferte</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Altri costi Diretti</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Utenze</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Canoni</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Ammortamenti</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Spese Varie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>