force-app/main/default/objects/Cost__c/fields/TotalCostValue__c.field-meta.xml
<CustomField>
    <fullName>TotalCostValue__c</fullName>
    <formula>Cost_Value__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>